test/conformance/chainsaw/generate/validation/clusterpolicy/author-authorization/cluster-target-permissions.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: generate-author-authorization-targets
rules:
- apiGroups:
  - ""
  resources:
  - configmaps
  verbs:
  - create
  - get
  - list
  - delete
---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  name: generate-author-authorization-targets
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: generate-author-authorization-targets
subjects:
- kind: ServiceAccount
  name: policy-author
  namespace: generate-author-authorization
