test/conformance/chainsaw/generate/validation/clusterpolicy/author-authorization/setup.yaml
apiVersion: v1
kind: ServiceAccount
metadata:
  name: policy-author
  namespace: generate-author-authorization
---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: generate-author-authorization-policies
rules:
- apiGroups:
  - kyverno.io
  resources:
  - clusterpolicies
  - cleanuppolicies
  verbs:
  - create
  - get
  - update
  - patch
---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  name: generate-author-authorization-policies
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: generate-author-authorization-policies
subjects:
- kind: ServiceAccount
  name: policy-author
  namespace: generate-author-authorization
---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: generate-author-authorization-cleanup-controller
rules:
- apiGroups:
  - ""
  resources:
  - configmaps
  verbs:
  - delete
  - list
---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  name: generate-author-authorization-cleanup-controller
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: generate-author-authorization-cleanup-controller
subjects:
- kind: ServiceAccount
  name: kyverno-cleanup-controller
  namespace: kyverno
---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: generate-author-authorization-background-controller
rules:
- apiGroups:
  - ""
  resources:
  - configmaps
  - secrets
  verbs:
  - create
  - get
  - patch
---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  name: generate-author-authorization-background-controller
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: generate-author-authorization-background-controller
subjects:
- kind: ServiceAccount
  name: kyverno-background-controller
  namespace: kyverno
